@@ -8,8 +8,7 @@ rem set cp1=-cp %JAVA_HOME%\lib\tools.jar;.;
 set GC_OPTIONS=-verbose:gc -Xloggc:verbose_gc.log -XX:+PrintGCDetails -XX:+PrintHeapAtGC -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintClassHistogram   -XX:+PrintCommandLineFlags -XX:+PrintConcurrentLocks -XX:+PrintGCTimeStamps 
 rem -XX:+PrintGCDateStamps -XX:+PrintTenuringDistribution  
 
-rem set EXTRA_OPTS=-XX:+UseParallelGC -XX:+UseStringCache -XX:+AggressiveOpts
-set JVM_OPTIONS=-Xmaxjitcodesize150m -Xss160k -XX:PermSize=128m -Xconcurrentio -XX:+UseParallelGC -XX:CompileThreshold=1500
+set JVM_OPTIONS=-XX:CompileThreshold=1500 -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:+UseParallelOldGCCompacting -XX:ParallelGCThreads=4
 
 rem %JAVA% %cp1% -server -Xms512m -Xmx512m %JVM_OPTIONS% %GC_OPTIONS% %EXTRA_OPTS% -jar dist\QuickCached-Server.jar %*
 java -server -Xms512m -Xmx512m %JVM_OPTIONS% %GC_OPTIONS% %EXTRA_OPTS% -jar dist\QuickCached-Server.jar %*
