@@ -5,8 +5,8 @@ rem set JAVA_HOME=d:\jdk1.6.0_23
 rem set JAVA=%JAVA_HOME%\bin\java
 rem set cp1=-cp %JAVA_HOME%\lib\tools.jar;.;
 
-rem set EXTRA_OPTS=-XX:+UseParallelGC -XX:+UseStringCache -XX:+AggressiveOpts
-set JVM_OPTIONS=-Xmaxjitcodesize150m -Xss160k -XX:PermSize=128m -Xconcurrentio -XX:+UseParallelGC -XX:CompileThreshold=1500
+set JVM_OPTIONS=-XX:CompileThreshold=1500 -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:+UseParallelOldGCCompacting -XX:ParallelGCThreads=4
 
-rem %JAVA% %cp1% -server -Xms512m -Xmx512m %JVM_OPTIONS% %EXTRA_OPTS% -jar dist\QuickCached-Server.jar %*
-java -server -Xms512m -Xmx512m %JVM_OPTIONS% %EXTRA_OPTS% -jar dist\QuickCached-Server.jar %*
+rem %JAVA% %cp1% -server -Xms512m -Xmx512m %JVM_OPTIONS% -Dappname=QC1 -jar dist\QuickCached-Server.jar %*
+java -server -Xms512m -Xmx512m %JVM_OPTIONS% -Dappname=QC1 -jar dist\QuickCached-Server.jar %*
+
